terraform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80 
  type: ClusterIP
